--- a/bulma/utilities/mixins.scss
+++ b/bulma/utilities/mixins.scss
@@ -1,7 +1,9 @@
+@use "sass:map";
+
 @use "initial-variables" as iv;
 @use "css-variables" as cv;
 
-@mixin arrow($color: #{cv.getVar("link")}) {
+@mixin arrow($color: #{cv.getVar("arrow-color")}) {
   border: 0.125em solid $color;
   border-right: 0;
   border-top: 0;
@@ -360,11 +362,11 @@
 }
 
 @mixin breakpoint($name) {
-  $breakpoint: map-get(iv.$breakpoints, $name);
+  $breakpoint: map.get(iv.$breakpoints, $name);
 
   @if $breakpoint {
-    $from: map-get($breakpoint, "from");
-    $until: map-get($breakpoint, "until");
+    $from: map.get($breakpoint, "from");
+    $until: map.get($breakpoint, "until");
 
     @if $from and $until {
       @include between($from, $until) {
